[starterfive] fix crumbs alignment

--- a/skins/starterfive/starterfive.css
+++ b/skins/starterfive/starterfive.css
@@ -167,6 +167,10 @@ box-shadow : 0 0 4px black;
 	padding-left : 1em;
 	}
 
+p#crumbs {
+	text-align : left;
+	padding : 0 1em;
+	}
 
 /**
 * customize tabs
